--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
-            <a href=""><img src="assets/img/Main Logo.png" style="width: 7%; height: 7%;"></a>
+            <a class="navbar-brand" href="#">
+                <img src="assets/img/Main Logo.png" width="60" height="40" alt="">
+              </a>
             <div id="myNav" class="overlay">
                 <!--button to close navigation overlay-->
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <!--nightmode toggle icon in mobile-->
                 <button class="btn text-right text-white" type="button" style="margin-right: 5px;">
-                    <i id="dark-mode-button" onclick="myFunction(this)" class="fas fa-moon" style="text-align: center; color:black;"></i>
+                    <i onclick="myFunction(this)" class="fas fa-moon" style="text-align: center; color:black;"></i>
                 </button>
                 <!--overlay content start-->
                 <div class="overlay-content d-flex justify-content-start" style="padding-left:15px;" id="navbarToggler">
@@ -309,58 +311,6 @@
         </section>
         <!--services end-->
 
-        <!--values start-->
-        <!-- <section class="values"> -->
-            <!-- display on large screen devices -->
-            <!-- <div class="d-none d-lg-block container my-5 start">
-                <div class="d-flex align-items-end">
-                    <div class="nav flex-column nav-pills mx-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                      <a class="nav-link active mt-5" id="v-pills-home-tab" data-bs-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true"><h1>Discover</h1></a>
-                      <a class="nav-link mt-3" id="v-pills-profile-tab" data-bs-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false"><h1>Design</h1></a>
-                      <a class="nav-link mt-3" id="v-pills-messages-tab" data-bs-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false"><h1>Develop</h1></a>
-                      <a class="nav-link mt-3" id="v-pills-settings-tab" data-bs-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false"><h1>Launch</h1></a>
-                    </div>
-                    <div class="tab-content" id="v-pills-tabContent">
-                        <div class="tab-pane fade show active ps-3 pb-5" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                            <h2 class="pb-1">01</h2>
-                            <h2 class="pb-5">CORE VALUES</h2>
-                            <p class="pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Unde fugiat ipsa provident dolorem animi ratione.</p>
-                        </div>
-                      <div class="tab-pane fade ps-3 pb-5" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                        <h2 class="pb-1">02</h2>
-                        <h2 class="pb-5">CORE VALUES</h2>
-                        <p class="pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Unde fugiat ipsa provident dolorem animi ratione.</p>
-                      </div>
-                      <div class="tab-pane fade ps-3 pb-5" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-                        <h2 class="pb-1">03</h2>
-                        <h2 class="pb-5">CORE VALUES</h2>
-                        <p class="pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Unde fugiat ipsa provident dolorem animi ratione.</p>
-                      </div>
-                      <div class="tab-pane fade ps-3 pb-5" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
-                        <h2 class="pb-1">04</h2>
-                        <h2 class="pb-5">CORE VALUES</h2>
-                        <p class="pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Unde fugiat ipsa provident dolorem animi ratione.</p>
-                      </div>
-                    </div>
-                </div>
-            </div> -->
-
-            <!-- display on small screen devices -->
-            <!-- <div class="container mt-5 rounded ps-3" style="background:#000011;">
-                <div id="mob-values" class="row mx-3 rounded p-3" style="background:#000011;">
-                    <div class="col-sm-12 py-3 ps-5"><h1 id="dddd-values" style="color:white;">Design</h1><p id="ddd-p" style="color:#B6B6B6">that stands out</p></div>
-                    <div class="col-sm-12 pb-3 ps-5"><h1 id="dddd-values" style="color:white;">Develop</h1><p id="ddd-p" style="color:#B6B6B6">with experts</p></div>
-                    <div class="col-sm-12 pb-3 ps-5"><h1 id="dddd-values" style="color:white;">Discover</h1><p id="ddd-p" style="color:#B6B6B6">and strategize</p></div>
-                    <div class="col-sm-12  ps-5"><h1 id="dddd-values" style="color:white;">Determine</h1><p id="ddd-p" style="color:#B6B6B6">and optimize</p></div>
-                </div>
-            </div>
-        </section> -->
-        <!--values end-->
-
         <!--newsletter subscription start-->
         <section class="news">
             <div class="container">
@@ -495,8 +445,6 @@
             $(document).ready(function(){
             $(window).scroll(function(){
                 var scroll = $(window).scrollTop();
-                var ele = document.getElementById('dark-mode-button').classList;
-                console.log(ele);
                 if (scroll > 300) {
                     $("#mainNav").css("background" , "#37474f");
                     $(".navbar-brand").css("color", "white");
